--- a/WatchWpfClient/App.xaml
+++ b/WatchWpfClient/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WatchWpfClient"
              xmlns:vm="clr-namespace:WatchWpfClient.ViewModels"
+             xmlns:views="clr-namespace:WatchWpfClient.Views"
              StartupUri="Views\MainWindow.xaml">
     <Application.Resources>
         <vm:MainWatchVm x:Key="MainWatchVm"/>
