--- a/WatchWpfClient/Views/MainWindow.xaml
+++ b/WatchWpfClient/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WatchWpfClient"
         xmlns:controls="clr-namespace:WatchWpfClient.Views.Controls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="800">
+        Title="MainWindow" Height="800" Width="800">
     <Window.Resources>
         <Storyboard x:Key="SecsAfterFinishSb">
             <DoubleAnimation
@@ -37,8 +37,10 @@
     </Window.Resources>
     <Grid Background="White" DataContext="{StaticResource MainWatchVm}">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height=".75*"/>
+            <RowDefinition Height="5"/>
+            <RowDefinition Height=".25*"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Height="425" Width="400">
             <Grid.Background>
@@ -112,18 +114,16 @@
                 </EventTrigger>
             </Grid.Triggers>
         </Grid>
-        <StackPanel Grid.Row="1" Orientation="Vertical">
-            <Separator/>
-            <ScrollViewer VerticalScrollBarVisibility="Visible" MinHeight="800">
-                <ListBox ItemsSource="{Binding Path=TimeSyncs}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=Text}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ListBox>
-            </ScrollViewer>
-            <!--<controls:TimeSyncDisplay></controls:TimeSyncDisplay>-->
+        <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"/>
+        <Separator Grid.Row="1"/>
+        <Grid Grid.Row="2" >
+            <controls:TimeSyncDisplay></controls:TimeSyncDisplay>            
+        </Grid>
+        <StackPanel Orientation="Vertical" Grid.Row="3">
+        <Separator/>
+        <DockPanel>
+            <Button Width="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" DockPanel.Dock="Right">Close</Button>
+        </DockPanel>
         </StackPanel>
     </Grid>
 </Window>
