--- a/WatchWpfClient/Views/MainWindow.xaml
+++ b/WatchWpfClient/Views/MainWindow.xaml
@@ -5,9 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WatchWpfClient"
         xmlns:controls="clr-namespace:WatchWpfClient.Views.Controls"
+        xmlns:converters="clr-namespace:WatchWpfClient.Views.Converters"
+        xmlns:vm="clr-namespace:WatchWpfClient.ViewModels"
         mc:Ignorable="d"
         Title="Web Assisted Time CHeck" Height="800" Width="800">
     <Window.Resources>
+        <converters:StateToTimeSyncVis x:Key="StateToTimeSyncVis"/>
+        <converters:StateToLogInVis x:Key="StateToLogInVis"/>
         <Storyboard x:Key="SecsAfterFinishSb">
             <DoubleAnimation
                 Storyboard.TargetName="Second"
@@ -143,7 +147,8 @@
         <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"/>
         <Separator Grid.Row="1"/>
         <Grid Grid.Row="2" >
-            <controls:TimeSyncDisplay></controls:TimeSyncDisplay>
+            <controls:TimeSyncDisplay Visibility="{Binding Path=State, Converter={StaticResource StateToTimeSyncVis}}"></controls:TimeSyncDisplay>
+            <controls:LogIn  Visibility="{Binding Path=State, Converter={StaticResource StateToLogInVis}}"></controls:LogIn>
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="3">
             <Separator/>
