--- a/WatchWpfClient/Views/Controls/LogIn.xaml
+++ b/WatchWpfClient/Views/Controls/LogIn.xaml
@@ -17,11 +17,14 @@
             <RowDefinition Height=".2*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
+                 VerticalAlignment="Bottom" Text="{Binding Path=LoginHandle, Mode=TwoWay}"/>
         <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="PasswordBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox x:Name="PasswordBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" 
+                     VerticalAlignment="Top" Text="{Binding Path=LoginPassword, Mode=TwoWay}"/>
         <DockPanel Grid.Row="2" Grid.Column="1">
-            <Button x:Name="LogInOkButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right">OK</Button>
+            <Button x:Name="LogInOkButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
+                    Command="{Binding LoginCommand}">OK</Button>
         </DockPanel>
     </Grid>
 </UserControl>
