--- a/WatchWpfClient/Views/Controls/NewUser.xaml
+++ b/WatchWpfClient/Views/Controls/NewUser.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WatchWpfClient.Views.Controls.LogIn"
+﻿<UserControl x:Class="WatchWpfClient.Views.Controls.NewUser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,22 +12,23 @@
             <ColumnDefinition Width=".75*"/>            
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height=".4*"/>
-            <RowDefinition Height=".4*"/>
+            <RowDefinition Height=".3*"/>
+            <RowDefinition Height=".3*"/>
+            <RowDefinition Height=".3*"/>
             <RowDefinition Height=".2*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
         <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
-                 VerticalAlignment="Bottom" Text="{Binding Path=LoginHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+                 VerticalAlignment="Bottom" Text="{Binding Path=NewUserHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox x:Name="PasswordBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" 
-                     VerticalAlignment="Top" Text="{Binding Path=LoginPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <DockPanel Grid.Row="2" Grid.Column="1">
-            <Button x:Name="LogInOkButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
-                    Command="{Binding LoginCommand}">OK</Button>
-            <Button x:Name="NewUserButton" Margin="5" DockPanel.Dock="Right" Width="80" HorizontalAlignment="Right"
-                    Command="{Binding ShowNewUserCommand}">New User</Button>
-            
+                     VerticalAlignment="Center" Text="{Binding Path=NewUserPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="Email (optional):" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <TextBox x:Name="EmailBox" Grid.Row="2" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" 
+                     VerticalAlignment="Top" Text="{Binding Path=NewUserEmail, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <DockPanel Grid.Row="3" Grid.Column="1">
+            <Button x:Name="CreateUserButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
+                    Command="{Binding NewUserCommand}">OK</Button>
         </DockPanel>
     </Grid>
 </UserControl>
