--- a/WatchWpfClient/Views/Controls/LogIn.xaml
+++ b/WatchWpfClient/Views/Controls/LogIn.xaml
@@ -20,8 +20,9 @@
         <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
                  VerticalAlignment="Bottom" Text="{Binding Path=LoginHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
-        <TextBox x:Name="PasswordBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" 
-                     VerticalAlignment="Top" Text="{Binding Path=LoginPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true"  Grid.Row="1" Grid.Column="1" Width="300" 
+                     Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                     local:PasswordBoxAssistant.BoundPassword="{Binding Path=LoginPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <DockPanel Grid.Row="2" Grid.Column="1">
             <Button x:Name="LogInOkButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
                     Command="{Binding LoginCommand}">OK</Button>
