--- a/WatchWpfClient/Views/Controls/NewUser.xaml
+++ b/WatchWpfClient/Views/Controls/NewUser.xaml
@@ -21,8 +21,9 @@
         <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
                  VerticalAlignment="Bottom" Text="{Binding Path=NewUserHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBox x:Name="PasswordBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" 
-                     VerticalAlignment="Center" Text="{Binding Path=NewUserPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="1" Grid.Column="1" Width="300" 
+                 Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" 
+                 local:PasswordBoxAssistant.BoundPassword="{Binding Path=NewUserPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="2" Grid.Column="0" Content="Email (optional):" HorizontalAlignment="Right" VerticalAlignment="Top"/>
         <TextBox x:Name="EmailBox" Grid.Row="2" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left" 
                      VerticalAlignment="Top" Text="{Binding Path=NewUserEmail, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
