--- a/WatchWpfClient/Views/Controls/MessagesDisplay.xaml
+++ b/WatchWpfClient/Views/Controls/MessagesDisplay.xaml
@@ -11,13 +11,16 @@
             <RowDefinition Height=".9*"/>
             <RowDefinition Height=".1*" MinHeight="30"/>
         </Grid.RowDefinitions>
-        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="0">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Row="0" Margin="0,0,0,5">
             <ItemsControl ItemsSource="{Binding Path=Messages}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Path=Sender}" FontWeight="Bold" Margin="5,0,0,0"/>
-                            <TextBlock Text="{Binding Path=Text}" Margin="10,0,0,0"/>
+                            <TextBlock Margin="0,0,5,0">Fm:</TextBlock>
+                            <TextBlock Text="{Binding Path=Sender}" FontWeight="Bold" MinWidth="80"/>
+                            <TextBlock Margin="0,0,5,0">To:</TextBlock>
+                            <TextBlock Text="{Binding Path=To}" Margin="10,0,0,0" FontWeight="Bold" MinWidth="80"/>
+                            <TextBlock Text="{Binding Path=Text}" Margin="10,0,0,0" Width="400" MaxHeight="200" TextWrapping="Wrap"/>
                             <TextBlock Text="{Binding Path=TimeStamp}" Margin="10,0,0,0" FontStyle="Italic"/>
                         </StackPanel>
                     </DataTemplate>
@@ -25,12 +28,15 @@
             </ItemsControl>
         </ScrollViewer>
         <StackPanel Orientation="Horizontal" Grid.Row="1">
-            <TextBox x:Name="messageTextbox" MinWidth="400" MaxWidth="1200" MaxHeight="30" Margin="5,0,0,0" VerticalContentAlignment="Center"
+            <TextBox x:Name="messageTextbox" MinWidth="400" MaxWidth="1000" MaxHeight="30" Margin="5,0,0,0" VerticalContentAlignment="Center"
                  Text="{Binding Path=NewMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBlock VerticalAlignment="Center" Margin="5,0,5,0">To:</TextBlock>
+            <TextBox x:Name="ToTextbox" Width="100" MaxHeight="30" Margin="5,0,0,0" VerticalContentAlignment="Center"
+                 Text="{Binding Path=NewMessageTo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <Button Margin="5,0,0,0" Padding="5" MaxHeight="30" Command="{Binding Path=WriteCommand}">Send</Button>
             <DockPanel>
                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                    <TextBox x:Name="grantAccessTextbox" MinWidth="200" MaxWidth="600" MaxHeight="30" Margin="25,0,0,0" VerticalContentAlignment="Center"
+                    <TextBox x:Name="grantAccessTextbox" Width="100" MaxHeight="30" Margin="30,0,0,0" VerticalContentAlignment="Center"
                  Text="{Binding Path=GrantAccessHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                     <Button Margin="5,0,0,0" Padding="5" MaxHeight="30" Command="{Binding Path=GrantAccessCommand}">Invite</Button>
                 </StackPanel>
