--- a/WatchWpfClient/Views/Controls/MessagesDisplay.xaml
+++ b/WatchWpfClient/Views/Controls/MessagesDisplay.xaml
@@ -16,7 +16,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Margin="0,0,5,0">Fm:</TextBlock>
+                            <TextBlock Margin="0,0,5,0">FM:</TextBlock>
                             <TextBlock Text="{Binding Path=Sender}" FontWeight="Bold" MinWidth="80"/>
                             <TextBlock Margin="0,0,5,0">To:</TextBlock>
                             <TextBlock Text="{Binding Path=To}" Margin="10,0,0,0" FontWeight="Bold" MinWidth="80"/>
@@ -30,7 +30,7 @@
         <StackPanel Orientation="Horizontal" Grid.Row="1">
             <TextBox x:Name="messageTextbox" MinWidth="400" MaxWidth="1000" MaxHeight="30" Margin="5,0,0,0" VerticalContentAlignment="Center"
                  Text="{Binding Path=NewMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-            <TextBlock VerticalAlignment="Center" Margin="5,0,5,0">To:</TextBlock>
+            <TextBlock VerticalAlignment="Center" Margin="5,0,5,0">TO:</TextBlock>
             <TextBox x:Name="ToTextbox" Width="100" MaxHeight="30" Margin="5,0,0,0" VerticalContentAlignment="Center"
                  Text="{Binding Path=NewMessageTo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <Button Margin="5,0,0,0" Padding="5" MaxHeight="30" Command="{Binding Path=WriteCommand}">Send</Button>
