--- a/WatchWpfClient/Views/MainWindow.xaml
+++ b/WatchWpfClient/Views/MainWindow.xaml
@@ -15,6 +15,7 @@
         <converters:StateToMsgVis x:Key="StateToMsgVis"/>
         <converters:StateToNewUserVis x:Key="StateToNewUserVis"/>
         <converters:StateToBackButtonVis x:Key="StateToBackButtonVis"/>
+        <converters:StateToVisibility x:Key="StateToVisibility"/>
         <Storyboard x:Key="SecsAfterFinishSb">
             <DoubleAnimation
                 Storyboard.TargetName="Second"
@@ -154,6 +155,8 @@
             <controls:LogIn  Visibility="{Binding Path=State, Converter={StaticResource StateToLogInVis}}"></controls:LogIn>
             <controls:MessagesDisplay Visibility="{Binding Path=State, Converter={StaticResource StateToMsgVis}}"></controls:MessagesDisplay>
             <controls:NewUser Visibility="{Binding Path=State, Converter={StaticResource StateToNewUserVis}}"></controls:NewUser>
+            <controls:PasswordReset Visibility="{Binding Path=State, ConverterParameter=PasswordReset, 
+                Converter={StaticResource StateToVisibility}}"></controls:PasswordReset>
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="3">
             <Separator/>
