--- a/WatchWpfClient/Views/Controls/PasswordReset.xaml
+++ b/WatchWpfClient/Views/Controls/PasswordReset.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
         <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
-                 VerticalAlignment="Bottom" Text="{Binding Path=NewUserHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                 VerticalAlignment="Bottom" Text="{Binding Path=LoginHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="1" Grid.Column="1" Width="300" 
                  Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" 
@@ -30,7 +30,7 @@
                  local:PasswordBoxAssistant.BoundPassword="{Binding Path=ResetPasswordValidation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <DockPanel Grid.Row="3" Grid.Column="1">
             <Button x:Name="ResetPasswordButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
-                    Command="{Binding NewUserCommand}">OK</Button>
+                    Command="{Binding ResetPasswordCommand}">OK</Button>
         </DockPanel>
     </Grid>
 </UserControl>
