Added password validation to new user creation. Minor UI changes.

--- a/WatchWpfClient/Views/Controls/PasswordReset.xaml
+++ b/WatchWpfClient/Views/Controls/PasswordReset.xaml
@@ -8,27 +8,29 @@
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{StaticResource MainWatchVm}">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".25*"/>
-            <ColumnDefinition Width=".75*"/>            
+            <ColumnDefinition Width=".4*"/>
+            <ColumnDefinition Width=".6*"/>            
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height=".25*"/>
-            <RowDefinition Height=".25*"/>
-            <RowDefinition Height=".25*"/>
-            <RowDefinition Height=".25*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Content="Password Reset" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="HandleTextBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
                  VerticalAlignment="Bottom" Text="{Binding Path=LoginHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="1" Grid.Column="1" Width="300" 
+        <Label Grid.Row="2" Grid.Column="0" Content="New password:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="2" Grid.Column="1" Width="300" 
                  Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" 
                  local:PasswordBoxAssistant.BoundPassword="{Binding Path=ResetPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="2" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="PasswordValidationBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="2" Grid.Column="1" Width="300" 
+        <Label Grid.Row="3" Grid.Column="0" Content="Repeat new password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="PasswordValidationBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="3" Grid.Column="1" Width="300" 
                  Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" 
                  local:PasswordBoxAssistant.BoundPassword="{Binding Path=ResetPasswordValidation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <DockPanel Grid.Row="3" Grid.Column="1">
+        <DockPanel Grid.Row="4" Grid.Column="1">
             <Button x:Name="ResetPasswordButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
                     Command="{Binding ResetPasswordCommand}">OK</Button>
         </DockPanel>
