--- a/WatchWpfClient/Views/Controls/NewUser.xaml
+++ b/WatchWpfClient/Views/Controls/NewUser.xaml
@@ -8,22 +8,29 @@
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{StaticResource MainWatchVm}">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".25*"/>
-            <ColumnDefinition Width=".75*"/>            
+            <ColumnDefinition Width=".4*"/>
+            <ColumnDefinition Width=".6*"/>            
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height=".4*"/>
-            <RowDefinition Height=".4*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
             <RowDefinition Height=".2*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="HandleTextBox" Grid.Row="0" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Content="New User" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="Handle:" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="HandleTextBox" Grid.Row="1" Grid.Column="1" Width="300" Height="20" Margin="5" HorizontalAlignment="Left"
                  VerticalAlignment="Bottom" Text="{Binding Path=NewUserHandle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="1" Grid.Column="1" Width="300" 
+        <Label Grid.Row="2" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="2" Grid.Column="1" Width="300" 
                  Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" 
                  local:PasswordBoxAssistant.BoundPassword="{Binding Path=NewUserPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <DockPanel Grid.Row="2" Grid.Column="1">
+        <Label Grid.Row="3" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="PasswordBoxValidation" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="3" Grid.Column="1" Width="300" 
+                 Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" 
+                 local:PasswordBoxAssistant.BoundPassword="{Binding Path=NewUserPasswordValidation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <DockPanel Grid.Row="4" Grid.Column="1">
             <Button x:Name="CreateUserButton" Margin="5" DockPanel.Dock="Right" Width="40" HorizontalAlignment="Right"
                     Command="{Binding NewUserCommand}">OK</Button>
         </DockPanel>
