--- a/WatchWpfClient/Views/Controls/NewUser.xaml
+++ b/WatchWpfClient/Views/Controls/NewUser.xaml
@@ -26,7 +26,7 @@
         <PasswordBox x:Name="PasswordBox" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="2" Grid.Column="1" Width="300" 
                  Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" 
                  local:PasswordBoxAssistant.BoundPassword="{Binding Path=NewUserPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="3" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="Repeat password:" HorizontalAlignment="Right" VerticalAlignment="Top"/>
         <PasswordBox x:Name="PasswordBoxValidation" local:PasswordBoxAssistant.BindPassword="true" Grid.Row="3" Grid.Column="1" Width="300" 
                  Height="20" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" 
                  local:PasswordBoxAssistant.BoundPassword="{Binding Path=NewUserPasswordValidation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
